# Projeto_BancoDeDados2

./: README.md
Polyglot_BackEnd-master/: alembic.ini  app.py  logging.conf.json  merge_project.ps1  projeto_unico.py
Polyglot_BackEnd-master/src/: settings.py
Polyglot_BackEnd-master/src/migrations/: env.py
Polyglot_BackEnd-master/src/routes/: products.py  user.py
Polyglot_BackEnd-master/src/schemas/: products.py  responses.py  token.py
Polyglot_BackEnd-master/src/utils/: relational_utils.py
S1_Polyglot_FrontEnd/: openapi.json  package.json
S1_Polyglot_FrontEnd/app/: globals.css  page.tsx
S1_Polyglot_FrontEnd/app/payment-methods/: page.tsx
S1_Polyglot_FrontEnd/app/register/: page.tsx
S1_Polyglot_FrontEnd/components/: CommerceCard.tsx  Loading.tsx  PaymentMethodForm.tsx  PurchaseSuccessSonner.tsx
S1_Polyglot_FrontEnd/contexts/: CartContext.tsx
S1_Polyglot_FrontEnd/lib/: types.ts
S2_Polyglot_BackEnd/: build.sh  database.db  pyproject.toml  requirements.txt
S2_Polyglot_BackEnd/src/: main.py
S2_Polyglot_BackEnd/src/core/: auth.py  database.py
S2_Polyglot_BackEnd/src/routes/: compras.py  payment_methods.py  token.py
S2_Polyglot_BackEnd/src/schemas/: compras.py  payment_methods.py  user.py
frontend-proj-dados-main/: README.md  components.json  next.config.ts
frontend-proj-dados-main/app/: layout.tsx
frontend-proj-dados-main/app/cart/: page.tsx
frontend-proj-dados-main/app/checkout/: page.tsx
frontend-proj-dados-main/app/login/: page.tsx
frontend-proj-dados-main/app/profile/: page.tsx
frontend-proj-dados-main/components/: ErrorBoundary.tsx  Navbar.tsx  UploadThingWrapper.tsx
frontend-proj-dados-main/contexts/: AuthContext.tsx  ThemeContext.tsx
frontend-proj-dados-main/lib/: api.ts  auth.ts
(+7 files in other folders)
